--- a/Email_Front/src/app/registeration/r-components/login/login.component.html
+++ b/Email_Front/src/app/registeration/r-components/login/login.component.html
@@ -13,7 +13,7 @@
     <div class="clearfix">
       <button type="submit" class="loginbtn">Login</button>
       <hr>
-      <button type="button" class="signupbtn" routerLink="/registeration/signup">Sign Up</button>
+      <button type="button" class="signupbtn" routerLink="/registeration/signup" (mouseup)="logIn()">Sign Up</button>
     </div>
   </div>
   </form>
