--- a/Email_Front/src/app/registeration/r-components/signup/signup.component.html
+++ b/Email_Front/src/app/registeration/r-components/signup/signup.component.html
@@ -5,14 +5,13 @@
     <p>Please fill in this form to create an account.</p>
     <hr>
     <label for="name"><b>Name</b></label>
-    <input type="text" placeholder="Enter Name" name="name" required>
+    <input type="text" placeholder="Enter Name" name="name" (keyup)="getName($event)" required>
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
-
+    <input type="text" placeholder="Enter Email" name="email" (keyup)="getEmail($event)" required>
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw" (keyup)="getPassword($event)" required>
     <div class="clearfix">
-      <button type="submit" class="signupbtn">Sign Up</button>
+      <button type="button" class="signupbtn" (mouseup)="signUp()">Sign Up</button>
       <hr>
       <button type="button" class="login" routerLink="/registeration/login">Login</button>
     </div>
