--- a/Email_Front/src/app/registeration/r-components/login/login.component.html
+++ b/Email_Front/src/app/registeration/r-components/login/login.component.html
@@ -1,4 +1,3 @@
-
 <body>
   <form action="/action_page.php" style="border:1px solid #ccc">
   <div class="container">
@@ -7,13 +6,12 @@
     <hr>
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
-
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
     <div class="clearfix">
-      <button type="submit" class="loginbtn">Login</button>
+      <button class="loginbtn">Login</button>
       <hr>
-      <button type="button" class="signupbtn" routerLink="/registeration/signup" (mouseup)="logIn()">Sign Up</button>
+      <button type="button" class="signupbtn" routerLink="/registeration/signup">Sign Up</button>
     </div>
   </div>
   </form>
