--- a/Email_Front/src/app/main-screen/m-components/inbox/button/button.component.css
+++ b/Email_Front/src/app/main-screen/m-components/inbox/button/button.component.css
@@ -6,15 +6,22 @@
     border: none;
     display: inline-flex;
     align-items: center;
-    transition-duration: 0.4s;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border-radius: 10px;
+    opacity: 0.8;
 }
 .parent:hover {
-    background-color: rgb(229, 49, 49); 
-    box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
+    color: red;
+    box-shadow: 5px 5px 10px 2px rgba(55, 55, 55, 0.8);
+    opacity: 1;
     cursor: pointer;
 }
 .parent:active {
-    background-color: rgb(198, 166, 166); 
+    background-color: rgb(231, 0, 0); 
+    color: rgb(255, 255, 255);
+    box-shadow: 0 5px rgb(55, 55, 55, 0.8);
+    transform: translateY(1px);
     cursor: pointer;
 }
 #sender{
