--- a/Email_Front/src/app/main-screen/main-screen.component.css
+++ b/Email_Front/src/app/main-screen/main-screen.component.css
@@ -1,4 +1,5 @@
 body {
+  background-color: transparent;
   border: 2px solid black;
   border-radius: 25px;
   box-sizing: border-box;
@@ -30,6 +31,7 @@ header {
 #title-text {
   margin-top: 25px;
   font-family: fantasy;
+  color: white;
 }
 #search-bar {
   height: 60px;
@@ -41,6 +43,8 @@ header {
   width: 400px;
   height: 30px;
   margin: auto;
+  color: white;
+  background-color: #503d3d;
 }
 
 /*-----------------------------------------  Menu ---------------------------------------------------*/
@@ -49,6 +53,9 @@ aside {
   display: flex;
   flex-direction: column;
   grid-area: sd;
+}
+aside button{
+  text-align: left;
 }
 #Compose-button {
   margin-top: 15px;
@@ -64,20 +71,19 @@ aside {
   border: none;
   cursor: pointer;
   width: 100%;
-  opacity: 0.9;
+  opacity: 0.6;
 }
 .Menu-buttons {
   height: 50px;
   font-size: 18px;
   font-family: Cursive;
-
   background-color: black;
   color: white;
   padding: 14px 20px;
   border: none;
   cursor: pointer;
   width: 100%;
-  opacity: 0.9;
+  opacity: 0.6;
 }
 
 .Menu-buttons:hover , #Compose-button:hover{
@@ -107,17 +113,15 @@ input[type=text]:focus{
 }
 
 #search-button {
-  width: 30px;
-  height: 30px;
+  height: 35px;
+  width: 60px;
   margin-left: 5px;
-  border-radius: 50%;
+  border-radius: 5%;
   font-family: Cursive;
-
   background-color: black;
   color: white;
-  border: none;
   cursor: pointer;
-  opacity: 0.9;
+  opacity: 0.65;
 }
 
 #search-button:hover {
@@ -125,5 +129,5 @@ input[type=text]:focus{
 }
 
 #search-button:active {
-  transform: translateY(4px);
+  transform: translateY(2px);
 }
