--- a/Email_Front/src/app/main-screen/m-components/button/button.component.html
+++ b/Email_Front/src/app/main-screen/m-components/button/button.component.html
@@ -1,6 +1,10 @@
-<button class="parent" (click)="returnId()">
-    <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="sender">{{this.emailHeader?.sender}}</div>
-    <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="subject">{{this.emailHeader?.subject}}</div> 
-    <div id="headerBody">{{this.emailHeader?.headerBody}}</div>
-    <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="date">{{this.emailHeader?.date}}</div>
-</button>
+<div class="parent">
+  <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="sender">{{this.emailHeader?.sender}}</div>
+  <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="subject">{{this.emailHeader?.subject}}</div>
+  <div id="headerBody">{{this.emailHeader?.headerBody}}</div>
+  <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="date">{{this.emailHeader?.date}}</div>
+  <button (click)="returnId()">Show</button>
+  <div id="select">
+    <label>Select:</label><input type="checkbox">
+  </div>
+</div>
