--- a/Email_Front/src/app/main-screen/m-components/create-folder/create-folder.component.css
+++ b/Email_Front/src/app/main-screen/m-components/create-folder/create-folder.component.css
@@ -3,23 +3,28 @@ input {
   background: #f1f1f1;
   border-color: #f1f1f1d4;
 }
+
 input:focus {
   background-color: #ddd;
 }
-#To-input {
-  width: 1570px;
+
+#Name-input {
+  width: 1550px;
 }
-#Subject-input {
-  width: 1538px;
+
+label {
+  color: white;
 }
-select {
-  background-color: #f1f1f1;
+
+legend {
+  color: white;
+  border-color: white;
 }
-select:focus {
-  background: #f1f1f1d4;
-}
+
 button {
   border: none;
+  float: right;
+  margin-top: 10px;
   display: inline-flex;
   align-items: center;
   background-color: rgb(0, 0, 0);
@@ -28,17 +33,8 @@ button {
   cursor: pointer;
   opacity: 0.6;
 }
+
 button:hover {
   opacity: 1;
 }
-#draft-button ,#send-button{
-  float: right;
-  margin: 2px;
-}
-label {
-  color: white;
-}
-fieldset {
-  border-color: white;
-  color: white;
-}
+
