--- a/Email_Front/src/app/main-screen/m-components/show-folders/folders/folders.component.css
+++ b/Email_Front/src/app/main-screen/m-components/show-folders/folders/folders.component.css
@@ -17,6 +17,7 @@
   opacity: 1;
   cursor: pointer;
 }
+
 button {
   border-radius: 10px;
   margin-left: 1%;
@@ -34,32 +35,17 @@ button:active {
   transform: translateY(1px);
   cursor: pointer;
 }
-#sender{
-  margin-left: 1%;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 10%;
-}
-#subject{
-  text-align: left;
-  width: 30%;
-  white-space: nowrap;
-  overflow: hidden;
-}
-#headerBody{
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 50%;
-}
-#date{
-  white-space: nowrap;
-  overflow: hidden;
-  width: 10%;
-}
 #select {
   width: 80px;
   margin-left: 20px;
 }
+
+#name{
+  margin-left: 1%;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 90%;
+}
+
 
