--- a/Email_Front/src/app/main-screen/main-screen.component.html
+++ b/Email_Front/src/app/main-screen/main-screen.component.html
@@ -53,6 +53,7 @@
       <button class="Menu-buttons" routerLink="/main-screen/trash">Trash <fa-icon style="color: red;" [icon]="Trash"></fa-icon></button>
       <button class="Menu-buttons" routerLink="/main-screen/draft">Draft <fa-icon style="color: red;" [icon]="Draft"></fa-icon></button>
       <button class="Menu-buttons" routerLink="/main-screen/sent">Sent <fa-icon style="color: red;" [icon]="Sent"></fa-icon></button>
+      <button class="Menu-buttons" id="add-contact-button" routerLink="/main-screen/add-contact">Add contact <fa-icon style="color: red;" [icon]="Contacts"></fa-icon></button>
       <button class="Menu-buttons" routerLink="/main-screen/contacts">Contacts <fa-icon style="color: red;" [icon]="Contacts"></fa-icon></button>
       <button class="Menu-buttons" id="c-Folders-buttons" routerLink="/main-screen/create-folder">Create folder <fa-icon style="color: red;" [icon]="NewFolder"></fa-icon></button>
       <button class="Menu-buttons" id="s-Folders-buttons" routerLink="/main-screen/show-folders">Show folders <fa-icon style="color: red;" [icon]="Folders"></fa-icon></button>
