--- a/Email_Front/src/app/main-screen/m-components/compose/compose.component.html
+++ b/Email_Front/src/app/main-screen/m-components/compose/compose.component.html
@@ -11,8 +11,8 @@
       <option value="5">5</option>
     </select><hr>
     <textarea name="message" rows="42" cols="215"></textarea>
-    <button type="button" id="attachments-button">Attachments <fa-icon [icon]="paperClip" style="color: red;"></fa-icon></button>
-    <button type="button" id="send-button">Send <fa-icon [icon]="send" style="color: red;"></fa-icon></button>
-    <button type="button" id="draft-button">Save as a Draft <fa-icon [icon]="save" style="color: red;"></fa-icon></button>
+    <button type="button" id="attachments-button">Attachments <fa-icon [icon]="paperClip"></fa-icon></button>
+    <button type="button" id="send-button">Send <fa-icon [icon]="send"></fa-icon></button>
+    <button type="button" id="draft-button">Save as a Draft <fa-icon [icon]="save"></fa-icon></button>
   </fieldset>
 </form>
