--- a/Email_Front/src/app/main-screen/m-components/button/button.component.html
+++ b/Email_Front/src/app/main-screen/m-components/button/button.component.html
@@ -1,10 +1,9 @@
 <div class="parent">
-  <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="sender">{{this.emailHeader?.sender}}</div>
-  <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="subject">{{this.emailHeader?.subject}}</div>
-  <div id="headerBody">{{this.emailHeader?.headerBody}}</div>
-  <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="date">{{this.emailHeader?.date}}</div>
-  <button (click)="returnId()">Show</button>
-  <div id="select">
-    <label>Select:</label><input type="checkbox">
-  </div>
+  <input id="select" type="checkbox" (click)="select()">
+  <button class="headerButton" (click)="returnId()">
+    <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="sender">{{this.emailHeader?.sender}}</div>
+    <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="subject">{{this.emailHeader?.subject}}</div> 
+    <div id="headerBody">{{this.emailHeader?.headerBody}}</div>
+    <div [style.font-weight]="this.emailHeader?.read ? '' : 'bold'" id="date">{{this.emailHeader?.date}}</div>
+</button>
 </div>
