--- a/Email_Front/src/app/main-screen/m-components/button/button.component.css
+++ b/Email_Front/src/app/main-screen/m-components/button/button.component.css
@@ -11,27 +11,25 @@
   border-radius: 10px;
   opacity: 0.8;
 }
+.headerButton{
+  display: flex;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border-radius: 10px;
+  opacity: 0.8;
+}
+.headerButton:hover {
+  color: red;
+  opacity: 1;
+  cursor: pointer;
+}
 .parent:hover {
   color: red;
   box-shadow: 5px 5px 10px 2px rgba(55, 55, 55, 0.8);
   opacity: 1;
-  cursor: pointer;
-}
-button {
-  border-radius: 10px;
-  margin-left: 1%;
-  white-space: nowrap;
-}
-button:hover {
-  color: red;
-  box-shadow: 5px 5px 10px 2px rgba(55, 55, 55, 0.8);
-  opacity: 1;
-  cursor: pointer;
-}
-button:active {
-  background-color: rgb(231, 0, 0);
-  color: rgb(255, 255, 255);
-  transform: translateY(1px);
   cursor: pointer;
 }
 #sender{
@@ -59,7 +57,9 @@ button:active {
   width: 10%;
 }
 #select {
+  transform : scale(1.5);
+  cursor: pointer;
   width: 80px;
   margin-left: 20px;
+  accent-color: red;
 }
-
