--- a/Email_Front/src/app/main-screen/m-components/inbox/inbox.component.css
+++ b/Email_Front/src/app/main-screen/m-components/inbox/inbox.component.css
@@ -1,4 +1,3 @@
-
 #tools{
   display: flex;
   width: 100%;
@@ -39,5 +38,10 @@ button:hover {
   width: 20%;
 }
 
+#delete-button{
+  transform: scale(1.2);
+}
 
-
+#delete-button:active{
+  transform: scale(1.1);
+}
