--- a/Email_Front/src/app/main-screen/main-screen.component.html
+++ b/Email_Front/src/app/main-screen/main-screen.component.html
@@ -44,7 +44,7 @@
         </select>
       </div>
       <div id="LogOut">
-        <button id="LogOut-button">LogOut</button>   <!--hna han7ot method on click tb3t ll back t2olo etl3 5als w n3ml routing fi ts-->
+        <button id="LogOut-button" (mouseup)="logOut()">LogOut</button>   <!--hna han7ot method on click tb3t ll back t2olo etl3 5als w n3ml routing fi ts-->
       </div>
     </header>
     <aside>
