--- a/Email_Front/src/app/main-screen/m-components/compose/compose.component.html
+++ b/Email_Front/src/app/main-screen/m-components/compose/compose.component.html
@@ -1,18 +1,18 @@
 <form action="/action_page.php">
   <fieldset>
     <legend>New message:</legend>
-    <label>To:</label><input id="To-input" type="text"><hr>
-    <label>Subject:</label> <input id="Subject-input" type="text"><hr>
-    <label> Priority:</label> <select name="Priority" id="Priority">
+    <label>To:</label><input id="To-input" type="text" (keyup)="getTo($event)"><hr>
+    <label>Subject:</label> <input id="Subject-input" type="text" (keyup)="getSubject($event)"><hr>
+    <label> Priority:</label> <select name="Priority" id="Priority" (change)="getPriority($event)">
       <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5</option>
     </select><hr>
-    <textarea name="message" rows="42" cols="215"></textarea>
+    <textarea name="message" rows="42" cols="215"  (keyup)="getBody($event)"></textarea>
     <button type="button" id="attachments-button">Attachments <fa-icon [icon]="paperClip"></fa-icon></button>
-    <button type="button" id="send-button">Send <fa-icon [icon]="send"></fa-icon></button>
-    <button type="button" id="draft-button">Save as a Draft <fa-icon [icon]="save"></fa-icon></button>
+    <button type="button" id="send-button" (mouseup)="new()">Send <fa-icon [icon]="send"></fa-icon></button>
+    <button type="button" id="draft-button" (mouseup)="draft()">Save as a Draft <fa-icon [icon]="save"></fa-icon></button>
   </fieldset>
 </form>
