--- a/Email_Front/src/app/main-screen/m-components/draft/draft.component.html
+++ b/Email_Front/src/app/main-screen/m-components/draft/draft.component.html
@@ -1,1 +1,10 @@
-<app-button *ngFor="let header of headers" [header]="header"></app-button>
+<div class="headerList" style="height: 94.5%;">
+  <app-email_button *ngFor="let header of headers | paginate: {itemsPerPage: 14 , currentPage: p}" [header]="header" [router]="'compose/s/'"></app-email_button>
+</div>
+<div id="tools">
+  <div id="pagination" style="width: 91.5%;">
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
+
+  <button id="delete-button"><fa-icon [icon]="Trash"></fa-icon></button>
+</div>
