--- a/Email_Front/src/app/main-screen/m-components/compose/compose.component.html
+++ b/Email_Front/src/app/main-screen/m-components/compose/compose.component.html
@@ -1,18 +1,21 @@
 <form action="/action_page.php">
   <fieldset>
     <legend>New message:</legend>
-    <label>To:</label><input id="To-input" type="text" (keyup)="getTo($event)"><hr>
-    <label>Subject:</label> <input id="Subject-input" type="text" (keyup)="getSubject($event)"><hr>
-    <label> Priority:</label> <select name="Priority" id="Priority" (change)="getPriority($event)">
+    <label>Subject:</label><input type="text" [(ngModel)]="subject" [ngModelOptions]="{standalone: true}"><hr>
+    <label>To:</label><input id="To-input" type="text" [(ngModel)]="receivers" [ngModelOptions]="{standalone: true}"><hr>
+    <label> Priority:</label> <select name="Priority" [(ngModel)]="priority">
+      <option selected disabled hidden value="0">Priority</option>
       <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5</option>
     </select><hr>
-    <textarea name="message" rows="42" cols="215"  (keyup)="getBody($event)"></textarea>
-    <button type="button" id="attachments-button">Attachments <fa-icon [icon]="paperClip"></fa-icon></button>
-    <button type="button" id="send-button" (mouseup)="new()">Send <fa-icon [icon]="send"></fa-icon></button>
-    <button type="button" id="draft-button" (mouseup)="draft()">Save as a Draft <fa-icon [icon]="save"></fa-icon></button>
+    <textarea name="message" rows="42" cols="215" [(ngModel)]="emailBody" [ngModelOptions]="{standalone: true}"></textarea>
+    <!-- <button type="button" id="attachments-button"><input type = "file" (change)="Uploadfile($event)"  multiple>Attachments <fa-icon [icon]="paperClip"></fa-icon></button> -->
+    <input type = "file" (change)="Uploadfile($event)"  id="attach" style="display: none;" multiple/>
+    <label id="attachments-button" for="attach">Attach <fa-icon [icon]="paperClip"></fa-icon></label>
+    <button type="button" id="send-button" (click)="sendEmail()">Send <fa-icon [icon]="send"></fa-icon></button>
+    <button type="button" id="draft-button" (click)="draft()">Save as a Draft <fa-icon [icon]="save"></fa-icon></button>
   </fieldset>
 </form>
