--- a/Email_Front/src/app/main-screen/m-components/contacts/button3/button3.component.css
+++ b/Email_Front/src/app/main-screen/m-components/contacts/button3/button3.component.css
@@ -11,53 +11,31 @@
   border-radius: 10px;
   opacity: 0.8;
 }
+.contactButton{
+  display: flex;
+  width: 87%;
+  height: 50px;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border-radius: 10px;
+  opacity: 0.8;
+}
+.contactButton:hover {
+  color: red;
+  opacity: 1;
+  cursor: pointer;
+}
 .parent:hover {
   color: red;
   box-shadow: 5px 5px 10px 2px rgba(55, 55, 55, 0.8);
   opacity: 1;
   cursor: pointer;
 }
-button {
-  border-radius: 10px;
-  margin-left: 1%;
-  white-space: nowrap;
-}
-button:hover {
-  color: red;
-  box-shadow: 5px 5px 10px 2px rgba(55, 55, 55, 0.8);
-  opacity: 1;
-  cursor: pointer;
-}
-button:active {
-  background-color: rgb(231, 0, 0);
-  color: rgb(255, 255, 255);
-  transform: translateY(1px);
-  cursor: pointer;
-}
-#sender{
-  margin-left: 1%;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 10%;
-}
-
 #select {
+  transform : scale(1.5);
+  cursor: pointer;
   width: 80px;
   margin-left: 20px;
-}
-
-#name{
-  margin-left: 1%;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 30%;
-}
-
-#email{
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 70%;
+  accent-color: red;
 }
