--- a/Email_Front/src/app/main-screen/m-components/contacts/contacts.component.html
+++ b/Email_Front/src/app/main-screen/m-components/contacts/contacts.component.html
@@ -1,13 +1,13 @@
 
 <!--<app-button *ngFor="let contact of contacts | paginate: {itemsPerPage: 14 , currentPage: p}" [header]="header"></app-button>-->
-<app-button3></app-button3>
+<div id="contact-list" style="height: 94.5%;">
+  <app-button3 *ngFor="let contact of contacts" [contactName]="contact"></app-button3>
+</div>
 <div id="tools">
   <!--<div id="pagination">
     <pagination-controls (pageChange)="p = $event"></pagination-controls>
   </div>-->
-  <div id="action-div">
-    <button>Save <fa-icon [icon]="Save"></fa-icon></button>
-    <button>Edit <fa-icon [icon]="Edit"></fa-icon></button>
-    <button>Delete <fa-icon [icon]="Trash"></fa-icon></button>
-  </div>
+  <div style="width: 91.5%"></div>
+  <button id="extras-button" (click)="deleteContacts()"><fa-icon [icon]="Trash"></fa-icon></button>
+  <button id="extras-button"><fa-icon [icon]="Save"></fa-icon></button>
 </div>
