--- a/Email_Front/src/app/main-screen/m-components/create-folder/create-folder.component.html
+++ b/Email_Front/src/app/main-screen/m-components/create-folder/create-folder.component.html
@@ -1,7 +1,7 @@
 <form action="/action_page.php">
   <fieldset>
     <legend>New folder:</legend>
-    <label>Name:</label><input id="Name-input" type="text">
-    <button type="button" id="save-button">Save<fa-icon></fa-icon></button>   <!--hna b2a method onclick 34an nb3t biha name da ll back w nb3t l showfolders 34an n display-->
+    <label>Name:</label><input id="Name-input" type="text" [(ngModel)]="folderName" [ngModelOptions]="{standalone: true}">
+    <button type="button" (click)="createFolder()" id="save-button"><fa-icon [icon]="Save"></fa-icon></button>   <!--hna b2a method onclick 34an nb3t biha name da ll back w nb3t l showfolders 34an n display-->
   </fieldset>
 </form>
