--- a/Email_Front/src/app/main-screen/m-components/show-folders/folders/folders.component.css
+++ b/Email_Front/src/app/main-screen/m-components/show-folders/folders/folders.component.css
@@ -1,4 +1,4 @@
-.parent{
+#tools{
   display: flex;
   width: 100%;
   height: 50px;
@@ -6,46 +6,10 @@
   border: none;
   display: inline-flex;
   align-items: center;
-  background-color: rgb(0, 0, 0);
+  background-color: #503d3d;
   color: white;
   border-radius: 10px;
   opacity: 0.8;
-}
-.parent:hover {
-  color: red;
-  box-shadow: 5px 5px 10px 2px rgba(55, 55, 55, 0.8);
-  opacity: 1;
-  cursor: pointer;
-}
-
-button {
-  border-radius: 10px;
-  margin-left: 1%;
-  white-space: nowrap;
-}
-button:hover {
-  color: red;
-  box-shadow: 5px 5px 10px 2px rgba(55, 55, 55, 0.8);
-  opacity: 1;
-  cursor: pointer;
-}
-button:active {
-  background-color: rgb(231, 0, 0);
-  color: rgb(255, 255, 255);
-  transform: translateY(1px);
-  cursor: pointer;
-}
-#select {
-  width: 80px;
-  margin-left: 20px;
-}
-
-#name{
-  margin-left: 1%;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 90%;
 }
 
 
