--- a/Email_Front/src/styles.css
+++ b/Email_Front/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+#extras-button{
+  transform: scale(1.2);  
+  border: none;
+  display: inline-flex;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding: 6px 20px;
+  cursor: pointer;
+  opacity: 0.6;
+  float: right;
+}
+
+#extras-button:hover{
+    opacity: 1;
+}
+
+#extras-button:active{
+    transform: scale(1.1);
+}
